--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
+    "expo-application": "~6.1.4",
+    "expo-device": "~7.1.4",
+    "expo-linking": "^7.1.5",
+    "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-maps": "1.20.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-device": "~7.1.4",
-    "expo-location": "~18.1.5",
-    "expo-application": "~6.1.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
